--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Git Casa do Código</title>
+	<title>Git Casa do Código - Móveis Ecologicos</title>
 	<link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
