--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Git Casa do Código - Móveis Ecologicos</title>
 	<link rel="stylesheet" type="text/css" href="estilos.css">
+
 </head>
 <body>
 	<h1>Móveis Ecologicos S.A</h1>
+	<h2 id="mensagem"></h2>
 	<ul>
 		<li>Móveis de Garrafas PET</li>
 		<li>Móveis de Latinhas de Alumínio</li>
 		<li>Móveis de papelão</li>
 	</ul>
 </body>
+<script src="principal.js"></script>
 </html>
