--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="estilos.css">
 
 </head>
-<body>
+<body onload="trocaBanner()">
 	<h1>Móveis Ecologicos S.A</h1>
 	<h2 id="mensagem"></h2>
 	<ul>
