--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 		<li>Móveis de papelão</li>
 	</ul>
 </body>
-<script src="principal.js"></script>
+<script src="js/principal.js"></script>
 </html>
