--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Git Casa do Código - Móveis Ecologicos</title>
-	<link rel="stylesheet" type="text/css" href="principal.css">
+	<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 </head>
 <body onload="trocaBanner()">
-	<h1>Móveis Ecologicos S.A</h1>
-	<h2 id="mensagem"></h2>
-	<ul>
-		<li>Móveis de Garrafas PET</li>
-		<li>Móveis de Latinhas de Alumínio</li>
-		<li>Móveis de papelão</li>
-	</ul>
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Móveis Ecologicos S.A</h1>
+			<h2 id="mensagem"></h2>
+			<ul class="list-group">
+				<li class="list-group-item">Móveis de Garrafas PET</li>
+				<li class="list-group-item">Móveis de Latinhas de Alumínio</li>
+				<li class="list-group-item">Móveis de papelão</li>
+			</ul>
+		</div>
+	</div>
+	
 </body>
 <script src="js/principal.js"></script>
 </html>
